plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

group 'com.blackoutburst'

version '2.0.4'

compileJava {
    sourceCompatibility = '16'
    targetCompatibility = '16'
    options.encoding = "UTF-8"
}

repositories {
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'}
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'}
    maven { url = 'https://repo.viaversion.com' }
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDir 'src/'
        }
    }
}

shadowJar {
    baseName = project.name
    version = project.version
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
    archives shadowJar
}

configurations {
    priority
    sourceSets.main.compileClasspath = configurations.priority + sourceSets.main.compileClasspath
}

dependencies {
    implementation 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
    implementation 'com.viaversion:viaversion-api:4.5.1'
    implementation files('lib/item-nbt-api-plugin-2.11.1.jar')
    implementation 'org.jetbrains:annotations:20.1.0'
}
